force-app/main/default/objects/Trip__c/fields/End_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>End_Geolocation__c</fullName>
    <label>End Geolocation</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>