force-app/main/default/objects/Trip__c/fields/Is_Hauling_Can__c.field-meta.xml
<CustomField>
    <fullName>Is_Hauling_Can__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Hauling Can</label>
    <type>Checkbox</type>
</CustomField>