force-app/main/default/objects/Trip__c/fields/Start_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Start_Geolocation__c</fullName>
    <label>Start Geolocation</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>